--- a/Explore/Deepthi/.Mapping3.DTEMPLATE.json
+++ b/Explore/Deepthi/.Mapping3.DTEMPLATE.json
@@ -1,7 +1,7 @@
 {
   "objectInfo" : {
-    "id" : "7RbYXvvNkuGdjc9qeNLfM1",
-    "name" : "m_loadxml_webservice",
+    "id" : "epZhVHGtJw6itlqOryGBCd",
+    "name" : "Mapping3",
     "type" : "DTEMPLATE",
     "metadata" : {
       "modelVersion" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "010QRS1700000000004K"
+        "repoHandle" : "010QRS17000000000054"
       },
       "contextAttributes" : [ {
         "name" : "id",
@@ -17,42 +17,16 @@
       } ],
       "additionalInfo" : {
         "description" : "",
-        "contentType" : "JSON",
+        "contentType" : null,
         "documentState" : "VALID"
       }
     }
   },
   "dataFileExtension" : "zip",
-  "updateTime" : "2025-01-21T10:18:59.476Z",
+  "updateTime" : "2025-01-21T10:18:59.480Z",
   "objectRefs" : [ {
-    "id" : "lM5qd5qXnsAdjn6JzW4wGa",
-    "name" : "bs-sampletest-loadxml",
-    "type" : "BSERVICE",
-    "metadata" : {
-      "modelVersion" : {
-        "major" : 0,
-        "minor" : 0
-      },
-      "repoInfo" : {
-        "repoHandle" : "010QRS27000000000002"
-      },
-      "contextAttributes" : [ {
-        "name" : "id",
-        "value" : "@1"
-      }, {
-        "name" : "010QRS28000000000002",
-        "value" : "lM5qd5qXnsAdjn6JzW4wGa@sampletest"
-      } ],
-      "additionalInfo" : {
-        "description" : "",
-        "contentType" : "JSON",
-        "documentState" : "VALID"
-      }
-    },
-    "path" : "/Explore/Deepthi"
-  }, {
-    "id" : "12LHkFp4CKEfQayIefpa0O",
-    "name" : "DR_Oracle_linux_mdeepthia",
+    "id" : "aE7hAMWaorzeLsL38KMmwh",
+    "name" : "Source_File",
     "type" : "Connection",
     "metadata" : {
       "modelVersion" : {
@@ -60,7 +34,27 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "010QRS0B00000000001V"
+        "repoHandle" : "010QRS0B00000000000D"
+      },
+      "contextAttributes" : null,
+      "additionalInfo" : {
+        "description" : null,
+        "contentType" : "JSON",
+        "documentState" : "COMPLETE"
+      }
+    },
+    "path" : "/SYS"
+  }, {
+    "id" : "6AavwAS0gM6hHib9uhxw6U",
+    "name" : "B360_Connection_FEP",
+    "type" : "Connection",
+    "metadata" : {
+      "modelVersion" : {
+        "major" : 0,
+        "minor" : 0
+      },
+      "repoInfo" : {
+        "repoHandle" : "010QRS0B00000000000E"
       },
       "contextAttributes" : null,
       "additionalInfo" : {
