--- a/Explore/Deepthi/.RjReferenceIngressMappingTask.MTT.json
+++ b/Explore/Deepthi/.RjReferenceIngressMappingTask.MTT.json
@@ -23,7 +23,7 @@
     }
   },
   "dataFileExtension" : "zip",
-  "updateTime" : "2025-01-21T10:25:38.454Z",
+  "updateTime" : "2025-02-10T08:59:42.168Z",
   "objectRefs" : [ {
     "id" : "5IUHTmJtYROe5UVWaRwCcK",
     "name" : "RjMappingReferenceIngress",
@@ -36,10 +36,7 @@
       "repoInfo" : {
         "repoHandle" : "010QRS1700000000005G"
       },
-      "contextAttributes" : [ {
-        "name" : "id",
-        "value" : "@1"
-      } ],
+      "contextAttributes" : null,
       "additionalInfo" : {
         "description" : "",
         "contentType" : null,
